[project]
name = "mapc_sim"
version = "0.2.2"
description = "IEEE 802.11 MAPC (C-SR) simulator"

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["802.11", "coordinated spatial reuse", "multi-access point coordination", "simulator"]

authors = [
  {name = "Maksymilian Wojnar", email = "maksymilian.wojnar@agh.edu.pl"},
  {name = "Wojciech Ciężobka", email = "wojciech.ciezobka@agh.edu.pl"},
  {name = "Katarzyna Kosek-Szott", email = "katarzyna.kosek-szott@agh.edu.pl"},
  {name = "Krzysztof Rusek", email = "krzysztof.rusek@agh.edu.pl"},
  {name = "Szymon Szott", email = "szymon.szott@agh.edu.pl"}
]

requires-python = ">=3.12"
dependencies = [
  "jax~=0.8.0",
  "tfp-nightly[jax]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mapc_sim"]

[project.optional-dependencies]
graph = [
  "jraph~=0.0.6.dev0"
]
